# baldurs_gate_3_translation

./: .env  .gitignore  docker-compose-dev.yml
client/: Cargo.toml
client/src/: main.rs
server/: .env  Cargo.toml  docker-compose-dev.yml
server/migrations/: 20230815091111_init.down.sql  20230815091111_init.up.sql
server/src/: axum_common.rs  config.rs  domain.rs  localization_line.rs  main.rs  parse.rs  repository.rs  table.rs
server/src/localization_line/: domain.rs  load.rs  repository.rs  routes.rs  table.rs  usecase.rs
