[package]
name = "BaldursGate3Translation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.16"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono"] }
uuid = { version = "1.4.1", features = ["v4"] }
sea-query = "0.30.0"
sea-query-binder = { version = "0.5.0", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.73"
dotenv = "0.15.0"
