[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
xml-rs = "0.8.16"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "uuid", "chrono"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
sea-query = { version = "0.30.0", features = ["backend-postgres", "with-chrono", "with-time", "with-uuid", "thread-safe", "derive", "attr"] }

sea-query-binder = { version = "0.5.0", features = [
    "sqlx-postgres",
    "with-chrono",
    "with-json",
    "with-rust_decimal",
    "with-bigdecimal",
    "with-uuid",
    "with-time",
] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.73"
dotenv = "0.15.0"
axum = "0.6.20"
serde = { version ="1.0.183"}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
tracing = "0.1.37"
axum-macros = "0.3.8"
chrono = { version = "0.4.26", features = ["serde"]}
